<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="type_here">Type here:</string>
    <string name="app_name">SmartDeviceLinkTester</string>
    <string name="connect">Connect</string>
    <string name="speak">Speak</string>
    <string name="slider_footer">Slider Footer</string>
    <string name="softbutton_type">Type:</string>
    <string name="softbutton_text">Text (if TEXT or BOTH):</string>
    <string name="softbutton_image">Image (if IMAGE or BOTH):</string>
    <string name="softbutton_isHighlighted">Highlighted?</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_soft_buttons_list">SoftButtons List</string>
    <string name="title_activity_soft_button_edit">Edit SoftButton</string>
    <string name="delete_icon_desc">Delete icon</string>
    <string name="softbutton_id">Id:</string>
    <string name="dialNumber_phoneNumber">Phone Number:</string>
    <string name="updateturnlist_turnList">Turn List (comma-separated)</string>
    <string name="updateturnlist_defaultTurnList">Turn Left,Turn Right,Go Forward</string>
    <string name="includeSoftButtons">Include</string>
    <string name="softButtons">Edit Soft Buttons</string>
    <string name="updateturnlist_iconList">Icon List (comma-separated, one for each turn)</string>
    <string name="updateturnlist_defaultIconList">turn_left.png,turn_right.png,turn_forward.png</string>
    <string name="addcommand_iconFilename">action.png</string>
    <string name="performinteraction_initialText">Initial Text</string>
    <string name="performinteraction_initialTextDefault">Pick number:</string>
    <string name="performinteraction_initialPrompt">Initial Prompt (comma-separated)</string>
    <string name="performinteraction_initialPromptDefault">Pick a command</string>
    <string name="performinteraction_interactionMode">Interaction Mode</string>
    <string name="performinteraction_interactionChoiceSetID">Choice Set IDs</string>
    <string name="performinteraction_helpPrompt">Help prompt (comma-separated)</string>
    <string name="performinteraction_helpPromptDefault">help me,I\'m melting</string>
    <string name="performinteraction_timeoutPrompt">Timeout prompt (comma-separated)</string>
    <string name="performinteraction_timeoutPromptDefault">hurry it up</string>
    <string name="performinteraction_vrHelp">VR Help Item #</string>
    <string name="performinteraction_vrHelpItemPosDefault">1</string>
    <string name="performinteraction_vrHelpItemDefault">VR help item</string>
    <string name="performinteraction_vrHelpItemImageDefault">imageFilename</string>
    <string name="performinteraction_timeout">Timeout</string>
    <string name="performinteraction_timeoutDefault">10000</string>
    <string name="show_mainField1">Main Field 1</string>
    <string name="show_mainField1Default">Show Line 1</string>
    <string name="show_mainField2">Main Field 2</string>
    <string name="show_mainField2Default">Show Line 2</string>
    <string name="show_mainField3">Main Field 3</string>
    <string name="show_mainField3Default">Show Line 3</string>
    <string name="show_mainField4">Main Field 4</string>
    <string name="show_mainField4Default">Show Line 4</string>
    <string name="show_textAlignment">Text Alignment</string>
    <string name="show_statusBar">Status Bar</string>
    <string name="show_statusBarDefault">status bar</string>
    <string name="show_mediaTrack">Media Track</string>
    <string name="show_mediaTrackDefault">Media Track</string>
    <string name="show_mediaClock">Media Clock</string>
    <string name="show_mediaClockDefault">12:34</string>
    <string name="show_graphic">Graphic</string>
    <string name="show_graphicDefault">imageFilename</string>
    <string name="show_includeSoftButtons">Include</string>
    <string name="show_softButtons">Soft Buttons</string>
    <string name="show_customPresets">Custom Presets (comma-separated)</string>
    <string name="show_customPresetsDefault">GEN0,GEN1,GEN2,GEN3,GEN4,GEN5</string>
    <string name="selectprotocol_protocolV1">Protocol v1</string>
    <string name="selectprotocol_protocolV2">Protocol v2</string>
    <string name="selectprotocol_media">Media</string>    
    <string name="saveaswavefile">Save as Wave File</string>    
    <string name="selectprotocol_appName">App name:</string>
    <string name="selectprotocol_appSynonym1">App synonym 1:</string>
    <string name="selectprotocol_appSynonym2">App synonym 2:</string>    
    <string name="selectprotocol_appNameDefault">SmartDeviceLinkTester</string>
    <string name="selectprotocol_appSynonymDefault1">Synonym1</string>
    <string name="selectprotocol_appSynonymDefault2">Synonym2</string>    
    <string name="selectprotocol_lang">Language:</string>
    <string name="selectprotocol_tts">TTS Text:</string>
    <string name="selectprotocol_tts_type">TTS Text Type:</string>
    <string name="selectprotocol_hmiLang">HMI language:</string>
    <string name="selectprotocol_wifi">WiFi</string>
    <string name="selectprotocol_wifi_autoconnect">WiFi Autoconnect</string>
    <string name="selectprotocol_bluetooth">Bluetooth</string>
    <string name="selectprotocol_ipAddress">IP address:</string>
    <string name="selectprotocol_ipAddressDefault">10.10.0.1</string>
    <string name="selectprotocol_tcpPort">Port:</string>
    <string name="selectprotocol_tcpPortDefault">12345</string>
    <string name="selectprotocol_autoReconnect">Auto reconnect</string>
    <string name="selectprotocol_extraOptions">Extra Options</string>
    <string name="selectprotocol_autoSetAppIcon">Set app icon after registration</string>
    <string name="createinteractionchoiceset_choiceVRSynonym">VR Synonym</string>
    <string name="createinteractionchoiceset_choiceUseImage">Use image:</string>
    <string name="createinteractionchoiceset_choice1">Choice 1</string>
    <string name="createinteractionchoiceset_choice1Default">1st item</string>
    <string name="createinteractionchoiceset_choice1VRDefault">Command one</string>
    <string name="createinteractionchoiceset_choice1ImageValue">turn_left.png</string>
    <string name="createinteractionchoiceset_choice2">Choice 2</string>
    <string name="createinteractionchoiceset_choice2Default">2nd item</string>
    <string name="createinteractionchoiceset_choice2VRDefault">Command two</string>
    <string name="createinteractionchoiceset_choice2ImageValue">turn_right.png</string>
    <string name="createinteractionchoiceset_choice3">Choice 3</string>
    <string name="createinteractionchoiceset_choice3Default">3rd item</string>
    <string name="createinteractionchoiceset_choice3VRDefault">Command three</string>
    <string name="createinteractionchoiceset_choice3ImageValue">turn_forward.png</string>
	<string name="actionBar_proxystart">Proxy Start</string>
	<string name="actionBar_toggleconsole">Toggle Console</string>
	<string name="actionBar_clearmessages">Clear Messages</string>
	<string name="actionBar_exit">Exit</string>
	<string name="actionBar_appversion">App Version</string>
	<string name="actionBar_unregister">Reset Connection</string>
	<string name="actionBar_raiinformation">RAI Information</string>
	<string name="actionBar_resetfunctionusage">Reset RPC Usage</string>
	<string name="actionBar_xmltest">XML Test</string>
	<string name="actionBar_showprotocolproperties">Protocol Properties</string>

</resources>