<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/proxystart"
        android:title="@string/actionBar_proxystart" />
    
    <item android:id="@+id/toggleconsole"
          android:title="@string/actionBar_toggleconsole" />
    
    <item android:id="@+id/clearmessages"
        android:title="@string/actionBar_clearmessages" />     

    <item android:id="@+id/exit"
        android:title="@string/actionBar_exit" 
        android:orderInCategory="100" />     

    <item android:id="@+id/appversion"
        android:title="@string/actionBar_appversion" />     
    
    <item android:id="@+id/unregister"
        android:title="@string/actionBar_unregister" />     
    
    <item android:id="@+id/raiinformation"
        android:title="@string/actionBar_raiinformation" />     
    
    <item android:id="@+id/resetfunctionusage"
        android:title="@string/actionBar_resetfunctionusage" />     
    
    <item android:id="@+id/xmltest"
        android:title="@string/actionBar_xmltest" />         

    <item android:id="@+id/showprotocolproperties"
        android:title="@string/actionBar_showprotocolproperties" />
            
</menu>
