<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:id="@+id/selectprotocol_Root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/selectprotocol_appName"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/selectprotocol_appName"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/selectprotocol_appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="5dp"
            android:layout_toRightOf="@+id/TextView1"
            android:ems="10"
            android:inputType="textCapSentences|textNoSuggestions"
            android:text="@string/selectprotocol_appNameDefault" >

            <requestFocus />
        </EditText>

        <CheckBox
            android:id="@+id/selectprotocol_checkMedia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/selectprotocol_appName"
            android:checked="true"
            android:text="@string/selectprotocol_media" />

        <TextView
            android:id="@+id/TextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/selectprotocol_checkMedia"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="8dp"
            android:text="@string/selectprotocol_appSynonym1"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/selectprotocol_appSynonym1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/selectprotocol_checkMedia"
            android:layout_marginRight="5dp"
            android:layout_toRightOf="@+id/TextView2"
            android:ems="10"
            android:inputType="textCapSentences|textNoSuggestions"
            android:maxLength="25"
            android:text="@string/selectprotocol_appSynonymDefault1" >
        </EditText>

        <TextView
            android:id="@+id/TextView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/selectprotocol_appSynonym1"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="8dp"
            android:text="@string/selectprotocol_appSynonym2"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/selectprotocol_appSynonym2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/selectprotocol_appSynonym1"
            android:layout_marginRight="5dp"
            android:layout_toRightOf="@+id/TextView3"
            android:ems="10"
            android:inputType="textCapSentences|textNoSuggestions"
            android:maxLength="25"
            android:text="@string/selectprotocol_appSynonymDefault2" >
        </EditText>

        <TextView
            android:id="@+id/TextView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/selectprotocol_appSynonym2"
            android:layout_marginLeft="5dp"
            android:text="@string/selectprotocol_tts"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/txtTTSName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/TextView4"
            android:gravity="top|left"
            android:inputType="textMultiLine|textNoSuggestions"
            android:lines="2"
            android:singleLine="false"
            android:text="SmartDeviceLinkTester"
            android:visibility="visible" >
        </EditText>

        <TextView
            android:id="@+id/TextView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/txtTTSName"
            android:layout_marginLeft="5dp"
            android:gravity="top|left"
            android:text="@string/selectprotocol_tts_type"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spnTTSType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/TextView5"
            android:visibility="visible" >
        </Spinner>

        <TextView
            android:id="@+id/TextView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/spnTTSType"
            android:layout_marginLeft="5dp"
            android:text="@string/selectprotocol_lang"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/selectprotocol_lang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/TextView6" />

        <TextView
            android:id="@+id/TextView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/TextView6"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@+id/selectprotocol_lang"
            android:text="@string/selectprotocol_hmiLang"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/selectprotocol_hmiLang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TextView10"
            android:layout_toRightOf="@+id/selectprotocol_lang" />

        <RadioGroup
            android:id="@+id/selectprotocol_radioGroupTransport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/selectprotocol_lang"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/selectprotocol_radioWiFi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selectprotocol_wifi" />
            
            <RadioButton
                android:id="@+id/selectprotocol_radioWiFiAuto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selectprotocol_wifi_autoconnect" />

            <RadioButton
                android:id="@+id/selectprotocol_radioBT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/selectprotocol_bluetooth" />
        </RadioGroup>

        <TextView
            android:id="@+id/TextView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/selectprotocol_ipAddr"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/selectprotocol_radioGroupTransport"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="16dp"
            android:text="@string/selectprotocol_ipAddress"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/selectprotocol_ipAddr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/selectprotocol_radioGroupTransport"
            android:layout_marginRight="5dp"
            android:layout_toRightOf="@+id/TextView7"
            android:ems="10"
            android:inputType="text"
            android:maxLength="15"
            android:text="@string/selectprotocol_ipAddressDefault" />

        <TextView
            android:id="@+id/TextView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/selectprotocol_tcpPort"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/selectprotocol_ipAddr"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="16dp"
            android:text="@string/selectprotocol_tcpPort"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/selectprotocol_tcpPort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/selectprotocol_ipAddr"
            android:layout_marginRight="5dp"
            android:layout_toRightOf="@+id/TextView8"
            android:ems="10"
            android:inputType="number"
            android:maxLength="5"
            android:text="@string/selectprotocol_tcpPortDefault" />

        <CheckBox
            android:id="@+id/selectprotocol_checkAutoReconnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/selectprotocol_tcpPort"
            android:checked="true"
            android:text="@string/selectprotocol_autoReconnect" />

        <TextView
            android:id="@+id/TextView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/selectprotocol_checkAutoReconnect"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:text="@string/selectprotocol_extraOptions"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <CheckBox
            android:id="@+id/selectprotocol_checkAutoSetAppIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/TextView9"
            android:checked="true"
            android:text="@string/selectprotocol_autoSetAppIcon" />

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/selectprotocol_appId"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/selectprotocol_checkAutoSetAppIcon"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="16dp"
            android:text="App ID:"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/selectprotocol_appId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/selectprotocol_checkAutoSetAppIcon"
            android:layout_marginRight="5dp"
            android:layout_toRightOf="@+id/TextView02"
            android:ems="10"
            android:inputType="text" >
        </EditText>

        <TextView
            android:id="@+id/TextView03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/selectprotocol_esn"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/selectprotocol_appId"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="16dp"
            android:text="ESN:"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/selectprotocol_esn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/selectprotocol_appId"
            android:layout_marginRight="5dp"
            android:layout_toRightOf="@+id/TextView03"
            android:ems="10"
            android:inputType="text" />
    </RelativeLayout>

</ScrollView>